--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.8.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
     "mongoose-unique-validator": "^3.1.0",
     "nodemon": "^2.0.20"
